--- a/app/views/rubeets/index.html.erb
+++ b/app/views/rubeets/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Rubeets#index</h1>
-<p>Find me in app/views/rubeets/index.html.erb</p>
+<h1>つぶやき一覧</h1>
+<% @rubeets.each do |rubeet| %>
+	<tr>
+		<p>
+			<td><%= rubeet.content %></td>
+		</p>
+	</tr>
+	<% end %>
+</table>
+<%= link_to '新しくつぶやく',new_rubeet_path %> 
+
