つぶやきを編集できるようにした

--- a/app/views/rubeets/index.html.erb
+++ b/app/views/rubeets/index.html.erb
@@ -3,6 +3,7 @@
 	<tr>
 		<p>
 			<td><%= rubeet.content %></td>
+			<td><%= link_to "つぶやきを編集する",edit_rubeet_path(rubeet.id) %></td>
 		</p>
 	</tr>
 	<% end %>
