--- a/app/views/rubeets/index.html.erb
+++ b/app/views/rubeets/index.html.erb
@@ -4,6 +4,7 @@
 		<p>
 			<td><%= rubeet.content %></td>
 			<td><%= link_to "つぶやきを編集する",edit_rubeet_path(rubeet.id) %></td>
+			<td><%= link_to"つぶやきを削除する",rubeet_path(rubeet.id),method: :delete ,data:{confirm:"本当に削除してもよろしいですか？"}%></td>
 		</p>
 	</tr>
 	<% end %>
