つぶやいた時、つぶやきを編集した時、つぶやきを削除した時にフラッシュメッセージが表示されるようにした

--- a/app/views/rubeets/index.html.erb
+++ b/app/views/rubeets/index.html.erb
@@ -1,11 +1,11 @@
 <h1>つぶやき一覧</h1>
+<p><%= notice %></p>
+<table>
 <% @rubeets.each do |rubeet| %>
 	<tr>
-		<p>
 			<td><%= rubeet.content %></td>
 			<td><%= link_to "つぶやきを編集する",edit_rubeet_path(rubeet.id) %></td>
 			<td><%= link_to"つぶやきを削除する",rubeet_path(rubeet.id),method: :delete ,data:{confirm:"本当に削除してもよろしいですか？"}%></td>
-		</p>
 	</tr>
 	<% end %>
 </table>
