--- a/app/views/rubeets/edit.html.erb
+++ b/app/views/rubeets/edit.html.erb
@@ -1,2 +1,6 @@
-<h2>つぶやきを編集</h2>
-<%= render'form' %>
+<div class="wrap">
+	<%= render 'header'%>
+	<h1>つぶやきを編集</h1>
+	<%= render 'form' %>
+	<%= render 'fotter' %>
+</div>
