--- a/app/views/rubeets/new.html.erb
+++ b/app/views/rubeets/new.html.erb
@@ -1,2 +1,6 @@
-<h2>新規つぶやき</h2>
-<%= render'form' %>
+<div class="wrap">
+	<%= render 'header'%>
+	<h1>今の気持ちをつぶやこう</h1>
+	<%= render 'form' %>
+	<%= render 'fotter' %>
+</div>
