--- a/app/views/rubeets/_form.html.erb
+++ b/app/views/rubeets/_form.html.erb
@@ -3,18 +3,14 @@
 		<div id="error_explanation">
 			<h2><%= @rubeet.errors.count %>件のエラーがあります。</h2>
 			<ul>
-			<%= @rubeet.errors.full_messages.each do |msg| %>
+			<% @rubeet.errors.full_messages.each do |msg| %>
 				<li><%= msg %></li>
 			<% end %>
 			</ul>
 		</div>
 	<% end %>	
-
-
-		<div class="rubeet_content">
-			<%= form.label :今の気持ちをつぶやこう %>
-			<%= form.text_field :content %>
+		<div class="main_content">
+			<%= form.text_area :content,class:"text_area" %>
+			<%= form.submit :つぶやく, class:"button" %>
 		</div>
-		<%= form.submit %>
 <% end %>
-<%= link_to "つぶやき一覧画面に戻る",rubeets_path %>
